# Text2ODP

./: README.md  pyproject.toml
outputs/run_local/: artifacts.json  dataset.jsonl  evaluation.csv  evaluation_summary.json
scripts/: run_experiment.py
src/text2odp/: __init__.py  cli.py  data.py  evaluation.py  llm.py  pipeline.py  prompts.py  schemas.py
tests/: test_evaluation.py  test_pipeline.py  test_run_experiment.py
